fix: slight change to color scheme, will be expanded upon later

--- a/src/app.css
+++ b/src/app.css
@@ -44,13 +44,13 @@
 	--card-foreground: oklch(0.985 0 0);
 	--popover: oklch(0.21 0.006 285.885);
 	--popover-foreground: oklch(0.985 0 0);
-	--primary: oklch(0.209 0 0);
+	--primary: oklch(62.98% 0.202 255.7);
 	--primary-foreground: oklch(1 0 0);
-	--secondary: oklch(0.274 0.006 286.033);
+	--secondary: oklch(20.46% 0 0);
 	--secondary-foreground: oklch(0.985 0 0);
 	--muted: oklch(0.274 0.006 286.033);
 	--muted-foreground: oklch(0.705 0.015 286.067);
-	--accent: oklch(0.274 0.006 286.033);
+	--accent: oklch(59.81% 0.2541 298);
 	--accent-foreground: oklch(0.985 0 0);
 	--destructive: oklch(0.704 0.191 22.216);
 	--border: oklch(1 0 0 / 10.5%);
