--- a/src/app.css
+++ b/src/app.css
@@ -121,6 +121,13 @@
 		font-optical-sizing: auto;
 	}
 
+	@layer base {
+		button:not(:disabled),
+		[role='button']:not(:disabled) {
+			cursor: pointer;
+		}
+	}
+
 	// TODO: figure out how to apply this only to the tour dialog.
   //       this causes really bad ux for things like dropdowns as is
 	/* [data-bits-floating-content-wrapper] { */
